--- a/contact.html
+++ b/contact.html
@@ -28,17 +28,17 @@
         <a href="contact.html">Contact</a>
     </nav>
     <main>
-        <h1 style="text-align: center;">CONTACT PAGE</h1><br>
+        <h1 style="text-align: center;">CONTACT PAGE</h1>
         <p><strong>Feel free to contact us...</strong></p>
         <form>
             <label>FULL NAME</label>
-                <input type="text"><br><br>
+                <input type="text">
             <label>EMAIL</label>
-                <input type="email"><br><br>
+                <input type="email">
             <label>PHONE NUMBER</label>
-                <input type="text"><br><br>
+                <input type="text">
             <label>MESSAGE</label>
-                <input type="textarea"><br><br>
+                <input type="textarea">
             <label>Agree to terms and conditions</label>
                 <input type="checkbox">
         </form>
