adds submit button

--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,8 @@
                 <input type="textarea">
             <label>Agree to terms and conditions</label>
                 <input type="checkbox">
+            <button>submit</button><br>
+            <button>reset</button>
         </form>
         <address>
             Blockfuse Labs GROUP7,<br>
