adds button on the same section

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                 <input type="textarea">
             <label>Agree to terms and conditions</label>
                 <input type="checkbox">
-            <button>submit</button><br>
+            <button>submit</button>
             <button>reset</button>
         </form>
         <address>
